--- a/app/src/main/res/layout/layout_searchitem.xml
+++ b/app/src/main/res/layout/layout_searchitem.xml
@@ -31,6 +31,12 @@
             android:text="TextView"
             android:textSize="14sp" />
 
+        <Button
+            android:id="@+id/JoinButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Join Group" />
+
     </LinearLayout>
 
 
